[package]
name = "week-3"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.26"
enum-as-inner = "0.6.0"
flate2 = "1.0.26"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary
